change response of api insert question to quiz
