# docs/swagger.json
@@ -311,7 +311,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.Quiz"
+                            "$ref": "#/definitions/model.CreateAndInsertQuestionToQuizResponse"
                         }
                     },
                     "400": {
@@ -696,6 +696,17 @@
                 },
                 "id": {
                     "type": "string"
+                }
+            }
+        },
+        "model.CreateAndInsertQuestionToQuizResponse": {
+            "type": "object",
+            "properties": {
+                "question": {
+                    "$ref": "#/definitions/model.Question"
+                },
+                "quiz": {
+                    "$ref": "#/definitions/model.Quiz"
                 }
             }
         },
